# adaptgym

./: .gitignore  README.md  pyproject.toml  setup.py  setup_old.cfg  setup_old.py
adaptgym/: example.py  fiddle_env.py  wrapped.py
adaptgym/envs/cdmc/rl/: control.py
adaptgym/envs/cdmc/suite/: __init__.py  acrobot.py  acrobot_c.xml  ball_in_cup.py  ball_in_cup_c.xml  cartpole.py  cartpole_c.xml  cheetah.py
adaptgym/envs/crafter/: plot_reward.py  plot_spectrum.py  read_metrics.py
adaptgym/envs/distracting_control/: background.py  camera_t3st.py  color.py  pixels.py  suite.py  suite_utils.py
adaptgym/envs/playground/: exploration_tracker.py  readme.md
adaptgym/envs/playground/arenas/: corridors.py  labmaze_textures.py  mazes.py
adaptgym/envs/playground/arenas/assets/: __init__.py
adaptgym/envs/playground/labmaze/assets/: __init__.py
adaptgym/envs/playground/policies/: policies.py
adaptgym/envs/playground/suite/: __init__.py  adaptenvs.py  ant.py  cheetah.py  humanoid.py  rodent.py  sphero.py  sphero_all.py
adaptgym/envs/playground/tasks/: custom_mazes.py  playgrounds.py  templates.py
adaptgym/envs/playground/walkers/: ant.py  jumping_ball.py  rodent.py
adaptgym/envs/playground/walkers/assets/: rodent.xml
adaptgym/envs/playground/walkers/assets/jumping_ball/: jumping_ball.xml  jumping_ball_wide_fov.xml  sliding_ball.xml
adaptgym/envs/scripts/: fiddle_env.py  fiddle_procgen.py  make_example_episodes.py
envs/cdmc/suite/: acrobot.py  ball_in_cup.xml  cartpole.py  cartpole.xml  cheetah.py  cheetah_c.xml
envs/crafter/: common.py  plot_counts.py  plot_scores.py
envs/distracting_control/: background.py  camera.py  suite.py
envs/playground/arenas/: covering.py  labmaze_textures.py  mazes.py
envs/playground/arenas/assets/: __init__.py
envs/playground/suite/: humanoid.py  sphero.py  walker.py
envs/playground/tasks/: multiagent_goal_maze.py  random_goal_maze.py  templates.py
envs/playground/walkers/: cmu_humanoid.py
envs/playground/walkers/assets/: rodent.xml
envs/scripts/: create_eval_dataset.py  make_example_episodes.py
envs/scripts/path/to/logdir/: stats.jsonl
tests/: test_cdmc.py  test_ddmc.py
