[tool.poetry]
name = "adaptgym"
#version = "0.1.1" # For pypi
version = "0.1.65" # For test.pypi
description = "Virtual environments for assessing agent exploration, inspired by animal assays."
homepage = "https://github.com/izkula/adaptgym"
license = "MIT"
authors = ["Isaac Kauvar <ikauvar@gmail.com>"]
packages = [
    { include = "adaptgym"},
]

[tool.poetry.dependencies]
python = "^3.8"
#numpy="1.19.5"
numpy="1.22"
scipy=">=1.7.0"
matplotlib=">=3.4.2"
dm-control="1.0.7"
dm-env="1.5"
dm-tree="0.1.7"
Pillow="8.2.0"
pytest = "^5.2"
protobuf = "3.20.3"
setuptools = "66.0.0"
#gym = "0.18.3"
bidict = "0.22.1"
pandas = ">= 1.2, <1.4"
opencv-python = ">=4.0.0" # Required just for fiddle_env
gym = "0.22.0"
pyopengl="3.1.6"

imageio="2.9.0"
mujoco="2.3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

#[build-system]
#requires = ['setuptools>=42']
#build-backend = 'setuptools.build_meta'
#
##[project]
##dependencies = [
##    "docutils",
##    "BazSpam == 1.1",
##]